update target_tag to target_tags
